--- a/clase-10.html
+++ b/clase-10.html
@@ -94,7 +94,23 @@
                     <p>$560.00</p>
                     <img src="/icons/flechita.svg" alt="arrow">
                 </div>
-                
+                <div class="order">
+                  <p>
+                      <span>03.25.21</span>
+                      <span>6 articulos</span>
+                  </p>
+                  <p>$560.00</p>
+                  <img src="/icons/flechita.svg" alt="arrow">
+              </div>
+              <div class="order">
+                <p>
+                    <span>03.25.21</span>
+                    <span>6 articulos</span>
+                </p>
+                <p>$560.00</p>
+                <img src="/icons/flechita.svg" alt="arrow">
+            </div>
+            
  
             </div>
 
